...
                android:layout_marginBottom="17dp"
                android:layout_toEndOf="@+id/emoji"
                android:text="DSJAKFLA"
                android:textSize="24sp" />

            <ImageView
                android:id="@+id/thumbnail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/trigger"
                android:layout_centerHorizontal="true"
                android:clickable="true"
                android:paddingBottom="5sp" />
...
